--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "git-describe": "^4.0.4",
     "lint-staged": "^10.2.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
