--- a/src/config/turtledoves_seasons.json
+++ b/src/config/turtledoves_seasons.json
@@ -7,28 +7,28 @@
             {
                 "active": true,
                 "data": "data/turtledoves/namenlos12020_2021.csv",
-                "name": "Namenlos 1",
+                "name": "Romeo",
                 "color": "#8c7851",
                 "opacity": 1
             },
             {
                 "active": true,
                 "data": "data/turtledoves/namenlos22020_2021.csv",
-                "name": "Namenlos 2",
+                "name": "Frieda",
                 "color": "#f25042",
                 "opacity": 1
             },
             {
                 "active": true,
                 "data": "data/turtledoves/namenlos32020_2021.csv",
-                "name": "Namenlos 3",
+                "name": "Julia",
                 "color": "#009FB7",
                 "opacity": 1
             },
             {
                 "active": true,
                 "data": "data/turtledoves/namenlos42020_2021.csv",
-                "name": "Namenlos 4",
+                "name": "Taubert",
                 "color": "#6246ea",
                 "opacity": 1
             },
