--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-VUE_APP_TITLE=NABU - Turteltauben
-VUE_APP_BIRDS=./config/turtledoves.json
-VUE_APP_SEASONS=./config/turtledoves_seasons.json
+VUE_APP_TITLE=NABU Hamburg - Weißstörche
+VUE_APP_BIRDS=./config/whitestorks_hamburg.json
+VUE_APP_SEASONS=./config/whitestorks_hamburg_seasons.json
 
-#VUE_APP_TITLE=NABU Hamburg - Weißstörche
-#VUE_APP_BIRDS=./config/whitestorks_hamburg.json
-#VUE_APP_SEASONS=./config/whitestorks_hamburg_seasons.json
+#VUE_APP_TITLE=NABU - Turteltauben
+#VUE_APP_BIRDS=./config/turtledoves.json
+#VUE_APP_SEASONS=./config/turtledoves_seasons.json
