--- a/src/config/whitestorks_hamburg_seasons.json
+++ b/src/config/whitestorks_hamburg_seasons.json
@@ -2,49 +2,98 @@
     {
         "action": "mdi-crosshairs-gps",
         "active": true,
-        "title": "2019 / 2020",
+        "title": "2020 / 2021",
         "turtledoves": [
             {
                 "active": true,
                 "color": "#ffff01",
-                "data": "data/WhiteStork-Hamburg-02-2019_2020.csv",
+                "data": "data/WhiteStork-Hamburg-02-2020_2021.csv",
                 "name": "Alexander",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#05ab03",
-                "data": "data/WhiteStork-Hamburg-01-2019_2020.csv",
+                "data": "data/WhiteStork-Hamburg-01-2020_2021.csv",
                 "name": "Ombeni",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#FF7F00",
-                "data": "data/WhiteStork-Hamburg-06-2019_2020.csv",
+                "data": "data/WhiteStork-Hamburg-06-2020_2021.csv",
                 "name": "Jürgen",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#8102b3",
-                "data": "data/WhiteStork-Hamburg-03-2019_2020.csv",
+                "data": "data/WhiteStork-Hamburg-03-2020_2021.csv",
                 "name": "Mimi",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#87d5fb",
-                "data": "data/WhiteStork-Hamburg-04-2019_2020.csv",
+                "data": "data/WhiteStork-Hamburg-04-2020_2021.csv",
                 "name": "Jan",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#0b7ac1",
-                "data": "data/WhiteStork-Hamburg-05-2019_2020.csv",
+                "data": "data/WhiteStork-Hamburg-05-2020_2021.csv",
                 "name": "Hanne",
                 "opacity": 1
+            }
+        ]
+    },
+    {
+        "action": "mdi-crosshairs-gps",
+        "active": false,
+        "title": "2019 / 2020",
+        "turtledoves": [
+            {
+                "active": false,
+                "color": "#ffff01",
+                "data": "data/WhiteStork-Hamburg-02-2019_2020.csv",
+                "name": "Alexander",
+                "opacity": 0.75
+            },
+            {
+                "active": false,
+                "color": "#05ab03",
+                "data": "data/WhiteStork-Hamburg-01-2019_2020.csv",
+                "name": "Ombeni",
+                "opacity": 0.75
+            },
+            {
+                "active": false,
+                "color": "#FF7F00",
+                "data": "data/WhiteStork-Hamburg-06-2019_2020.csv",
+                "name": "Jürgen",
+                "opacity": 0.75
+            },
+            {
+                "active": false,
+                "color": "#8102b3",
+                "data": "data/WhiteStork-Hamburg-03-2019_2020.csv",
+                "name": "Mimi",
+                "opacity": 0.75
+            },
+            {
+                "active": false,
+                "color": "#87d5fb",
+                "data": "data/WhiteStork-Hamburg-04-2019_2020.csv",
+                "name": "Jan",
+                "opacity": 0.75
+            },
+            {
+                "active": false,
+                "color": "#0b7ac1",
+                "data": "data/WhiteStork-Hamburg-05-2019_2020.csv",
+                "name": "Hanne",
+                "opacity": 0.75
             }
         ]
     }
