Added new six birds for season 2020/2021

--- a/src/config/whitestorks_hamburg_seasons.json
+++ b/src/config/whitestorks_hamburg_seasons.json
@@ -45,6 +45,48 @@
                 "data": "data/WhiteStork-Hamburg-05-2020_2021.csv",
                 "name": "Hanne",
                 "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#0b7ac1",
+                "data": "data/WhiteStork-Hamburg-07-2020_2021.csv",
+                "name": "Stefan",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#0b7ac1",
+                "data": "data/WhiteStork-Hamburg-08-2020_2021.csv",
+                "name": "Michael",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#0b7ac1",
+                "data": "data/WhiteStork-Hamburg-09-2020_2021.csv",
+                "name": "Christian-Eike",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#0b7ac1",
+                "data": "data/WhiteStork-Hamburg-10-2020_2021.csv",
+                "name": "Regina",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#0b7ac1",
+                "data": "data/WhiteStork-Hamburg-11-2020_2021.csv",
+                "name": "Tina",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#0b7ac1",
+                "data": "data/WhiteStork-Hamburg-12-2020_2021.csv",
+                "name": "Trunca",
+                "opacity": 1
             }
         ]
     },
