--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,22 @@
 /* Contents of {repository-root}/.devcontainer/devcontainer.json */
-
 {
+  "name": "Vue",
+  "build": {
+    "dockerfile": "Dockerfile",
+    "context": "..",
+    // Update 'VARIANT' to pick a Node version. Rebuild the container
+    // if it already exists to update. Available variants: 10, 12, 14
+    "args": {
+      "VARIANT": "14"
+    }
+  },
+  // Set *default* container specific settings.json values on container create.
+  "settings": {
+    "terminal.integrated.shell.linux": "/bin/zsh",
+    "peacock.remoteColor": "#0078D7"
+  },
   // Open port 8080 by default
   "appPort": 8080,
-
   // Install ESLint and Peacock extensions
   "extensions": [
     "dbaeumer.vscode-eslint",
@@ -16,10 +29,12 @@
     "gruntfuggly.todo-tree",
     "jgclark.vscode-todo-highlight"
   ],
-
-  // Set remote color for Peacock
-  "settings": {
-    "peacock.remoteColor": "#0078D7"
-  },
-
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  "forwardPorts": [
+    8080
+  ],
+  // Use 'postCreateCommand' to run commands after the container is created.
+  // "postCreateCommand": "uname -a",
+  // Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
+  // "remoteUser": "node"
 }
