Changed order just for testing

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,15 +12,15 @@
   },
   // Set *default* container specific settings.json values on container create.
   "settings": {
-    "terminal.integrated.shell.linux": "/bin/zsh",
-    "peacock.remoteColor": "#0078D7",
     "workbench.colorTheme": "Shades of Purple",
     "workbench.iconTheme": "material-icon-theme",
     "colorize.languages": [
         "javascript",
         "json",
         "html"
-    ]
+    ],
+    "terminal.integrated.shell.linux": "/bin/zsh",
+    "peacock.remoteColor": "#0078D7"
   },
   // Open port 8080 by default
   "appPort": 8080,
