--- a/src/config/whitestorks_seasons.json
+++ b/src/config/whitestorks_seasons.json
@@ -7,49 +7,49 @@
             {
                 "active": true,
                 "color": "#ffff01",
-                "data": "data/arthur-2020_2021.csv",
+                "data": "data/whitestorks/arthur-2020_2021.csv",
                 "name": "Arthur",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#05ab03",
-                "data": "data/hans-2020_2021.csv",
+                "data": "data/whitestorks/hans-2020_2021.csv",
                 "name": "Hans Albert",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#FF7F00",
-                "data": "data/gustav-2020_2021.csv",
+                "data": "data/whitestorks/gustav-2020_2021.csv",
                 "name": "Gustav",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#8102b3",
-                "data": "data/leo-2020_2021.csv",
+                "data": "data/whitestorks/leo-2020_2021.csv",
                 "name": "Leo",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#87d5fb",
-                "data": "data/robert-2020_2021.csv",
+                "data": "data/whitestorks/robert-2020_2021.csv",
                 "name": "Robert",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#0b7ac1",
-                "data": "data/fred-2020_2021.csv",
+                "data": "data/whitestorks/fred-2020_2021.csv",
                 "name": "Fred",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#C5A144",
-                "data": "data/fritzi-2020_2021.csv",
+                "data": "data/whitestorks/fritzi-2020_2021.csv",
                 "name": "Fritzi",
                 "opacity": 1
             }
