--- a/src/config/whitestorks_hamburg_seasons.json
+++ b/src/config/whitestorks_hamburg_seasons.json
@@ -2,87 +2,157 @@
     {
         "action": "mdi-crosshairs-gps",
         "active": true,
-        "title": "2020 / 2021",
+        "title": "2021 / 2022",
         "turtledoves": [
             {
                 "active": true,
                 "color": "#ffff01",
-                "data": "data/WhiteStork-Hamburg-02-2020_2021.csv",
+                "data": "data/WhiteStork-Hamburg-02-2021_2022.csv",
                 "name": "Alexander",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#66642B",
-                "data": "data/WhiteStork-Hamburg-09-2020_2021.csv",
+                "data": "data/WhiteStork-Hamburg-09-2021_2022.csv",
                 "name": "Christian-Eike",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#0b7ac1",
-                "data": "data/WhiteStork-Hamburg-05-2020_2021.csv",
+                "data": "data/WhiteStork-Hamburg-05-2021_2022.csv",
                 "name": "Hanne",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#8102b3",
-                "data": "data/WhiteStork-Hamburg-03-2020_2021.csv",
+                "data": "data/WhiteStork-Hamburg-03-2021_2022.csv",
                 "name": "Jan",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#FF7F00",
-                "data": "data/WhiteStork-Hamburg-06-2020_2021.csv",
+                "data": "data/WhiteStork-Hamburg-06-2021_2022.csv",
                 "name": "Jürgen",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#CFCF63",
-                "data": "data/WhiteStork-Hamburg-08-2020_2021.csv",
+                "data": "data/WhiteStork-Hamburg-08-2021_2022.csv",
                 "name": "Michael",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#87d5fb",
-                "data": "data/WhiteStork-Hamburg-04-2020_2021.csv",
+                "data": "data/WhiteStork-Hamburg-04-2021_2022.csv",
                 "name": "Mimi",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#05ab03",
-                "data": "data/WhiteStork-Hamburg-01-2020_2021.csv",
+                "data": "data/WhiteStork-Hamburg-01-2021_2022.csv",
                 "name": "Ombeni",
                 "opacity": 1
             },
             {
                 "active": true,
+                "color": "#681B0F",
+                "data": "data/WhiteStork-Hamburg-11-2021_2022.csv",
+                "name": "Tina",
+                "opacity": 1
+            }
+        ]
+    },
+    {
+        "action": "mdi-crosshairs-gps",
+        "active": false,
+        "title": "2020 / 2021",
+        "turtledoves": [
+            {
+                "active": false,
+                "color": "#ffff01",
+                "data": "data/WhiteStork-Hamburg-02-2020_2021.csv",
+                "name": "Alexander",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#66642B",
+                "data": "data/WhiteStork-Hamburg-09-2020_2021.csv",
+                "name": "Christian-Eike",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#0b7ac1",
+                "data": "data/WhiteStork-Hamburg-05-2020_2021.csv",
+                "name": "Hanne",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#8102b3",
+                "data": "data/WhiteStork-Hamburg-03-2020_2021.csv",
+                "name": "Jan",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#FF7F00",
+                "data": "data/WhiteStork-Hamburg-06-2020_2021.csv",
+                "name": "Jürgen",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#CFCF63",
+                "data": "data/WhiteStork-Hamburg-08-2020_2021.csv",
+                "name": "Michael",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#87d5fb",
+                "data": "data/WhiteStork-Hamburg-04-2020_2021.csv",
+                "name": "Mimi",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#05ab03",
+                "data": "data/WhiteStork-Hamburg-01-2020_2021.csv",
+                "name": "Ombeni",
+                "opacity": 1
+            },
+            {
+                "active": false,
                 "color": "#4E3723",
                 "data": "data/WhiteStork-Hamburg-10-2020_2021.csv",
                 "name": "Regina",
                 "opacity": 1
             },
             {
-                "active": true,
+                "active": false,
                 "color": "#C5A144",
                 "data": "data/WhiteStork-Hamburg-07-2020_2021.csv",
                 "name": "Stefan",
                 "opacity": 1
             },
             {
-                "active": true,
+                "active": false,
                 "color": "#681B0F",
                 "data": "data/WhiteStork-Hamburg-11-2020_2021.csv",
                 "name": "Tina",
                 "opacity": 1
             },
             {
-                "active": true,
+                "active": false,
                 "color": "#CB8460",
                 "data": "data/WhiteStork-Hamburg-12-2020_2021.csv",
                 "name": "Trunca",
