--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VUE_APP_TITLE=Michael-Otto-Institut im NABU in Bergenhusen - Weißstörche
-VUE_APP_BIRDS=./config/whitestorks.json
-VUE_APP_SEASONS=./config/whitestorks_seasons.json
+#VUE_APP_TITLE=Michael-Otto-Institut im NABU in Bergenhusen - Weißstörche
+#VUE_APP_BIRDS=./config/whitestorks.json
+#VUE_APP_SEASONS=./config/whitestorks_seasons.json
 
 #VUE_APP_TITLE=NABU Hamburg - Weißstörche
 #VUE_APP_BIRDS=./config/whitestorks_hamburg.json
@@ -9,3 +9,7 @@ VUE_APP_SEASONS=./config/whitestorks_seasons.json
 #VUE_APP_TITLE=NABU - Turteltauben
 #VUE_APP_BIRDS=./config/turtledoves.json
 #VUE_APP_SEASONS=./config/turtledoves_seasons.json
+
+VUE_APP_TITLE=Michael-Otto-Institut im NABU in Bergenhusen - Zwergschwäne
+VUE_APP_BIRDS=./config/zwergschwan.json
+VUE_APP_SEASONS=./config/zwergschwan_seasons.json
