--- a/src/config/zwergschwan_seasons.json
+++ b/src/config/zwergschwan_seasons.json
@@ -3,6 +3,7 @@
     "action": "mdi-crosshairs-gps",
     "active": true,
     "title": "2022",
+    "dashOldOnes": [30,60,90],
     "turtledoves": [
       {
         "active": true,
