more adaptions zwergschwan 2022

--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@
 #VUE_APP_BIRDS=./config/turtledoves.json
 #VUE_APP_SEASONS=./config/turtledoves_seasons.json
 
-VUE_APP_TITLE=Michael-Otto-Institut im NABU in Bergenhusen - Zwergschwäne
+VUE_APP_TITLE=Zwergschwäne auf Reisen - Projekt Zwergschwan
 VUE_APP_BIRDS=./config/zwergschwan.json
 VUE_APP_SEASONS=./config/zwergschwan_seasons.json
